# cs-gy-6613-assignments

./: README.md
hw1/: 01-assignment-1.ipynb  README.md
hw1b/: assignment-1b.ipynb
hw2/: assignment-2.ipynb
hw2b/: Qdrant-search.ipynb  assignment-2b-new.ipynb  assignment-2b.ipynb  pyproject.toml  readme.md
hw3/: readme.md
project/: ETL.ipynb  Instructgen-openai.ipynb  README.md  docker-compose-UI.yml  docker-compose-clearml.yml  docker-compose.yml  fine-tune.ipynb  gradio.ipynb  pyproject.toml
