[project]
name = "anamalib"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "anomalib>=1.1.1",
    "ipykernel>=6.29.5",
    "lightning>=2.4.0",
    "torchvision>=0.20.0",
    "opencv-python>=4.10.0.84",
    "imgaug>=0.4.0",
    "kornia>=0.7.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "timm>=1.0.11",
    "einops>=0.8.0",
    "freia>=0.2",
    "open-clip-torch>=2.28.0",
    "wandb>=0.18.5",
    "ipywidgets>=8.1.5",
    "openvino>=2024.4.0",
    "qdrant-client>=1.12.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anamalib"]
