[project]
name = "anamalib"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "anomalib>=1.1.1",
    "ipykernel>=6.29.5",
    "lightning>=2.4.0",
    "torchvision>=0.20.0",
    "opencv-python>=4.10.0.84",
    "imgaug>=0.4.0",
    "kornia>=0.7.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "timm>=1.0.11",
    "einops>=0.8.0",
    "grpcio-tools>=1.57",
    "freia>=0.2",
    "open-clip-torch>=2.28.0",
    "wandb>=0.18.5",
    "ipywidgets>=8.1.5",
    "openvino>=2024.4.0",
    "qdrant-client>=1.12.1",
    "clearml>=1.16.5",
    "pymongo==4.0",
    "requests<=2.31.0",
    "beautifulsoup4>=4.12.3",
    "markdown>=3.7",
    "clearml-agent>=1.9.2",
    "nbconvert>=7.16.4",
    "beautifulsoup4<=4.12.3",
    "sentence-transformers>=3.3.1",
    "gradio>=5.7.1",
    "faiss-cpu>=1.9.0.post1",
    "openai>=1.57.0",
    "dataset>=1.6.2",
    "datasets<=3.1.0",
    "yt-dlp>=2024.12.6",
    "assemblyai>=0.35.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anamalib"]
